# lib/api-spec/openapi.yaml
@@ -1593,6 +1593,15 @@ components:
         receiptName:
           type: string
           nullable: true
+        parLevel:
+          type: number
+          minimum: 0
+        moq:
+          type: number
+          minimum: 0
+        preferredReorderQuantity:
+          type: number
+          minimum: 0
         labName:
           type: string
           nullable: true
@@ -1930,6 +1939,15 @@ components:
         receiptName:
           type: string
           nullable: true
+        parLevel:
+          type: number
+          minimum: 0
+        moq:
+          type: number
+          minimum: 0
+        preferredReorderQuantity:
+          type: number
+          minimum: 0
 
     CatalogItemListResponse:
       type: object
